--- a/index.html
+++ b/index.html
@@ -1,11 +1,228 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    hell0
-</body>
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+
+    <title>welcome</title>
+  </head>
+  <body>
+      <header class="header-section pt-3">
+            <nav class="navbar navbar-expand-lg navbar-light">
+                <div class="container">
+                  <a class="navbar-brand" href="#"><img src="images/Group_33072_300x45.png" alt=""></a>
+                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                  </button>
+                  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                      <li class="nav-item mr-2">
+                        <a class="nav-link nav-text" href="#">Home</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link nav-text" href="#">Product</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link nav-text" href="#">About us</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link nav-text" href="#">Contact us</a>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+              </nav>
+
+              <div class="banner">
+                  <div class="container">
+                    <div class="row">
+                        <div class="col-md-6 mt-5 pt-5"> 
+                            <h1><span class="">Be the Penguins</span> <br> of winter</h1>
+                            <p>   Lorem Ipsum is simply dummy text of the printing  <br>
+                                  and typesetting industry.</p>
+                            <button class="btn btn-info text-white btn-custom"><img src="images/shopping-cart 1.png" alt="" style="width: 30px; height: 30px;"> BUY NOW</button>   
+                         
+                        </div>
+                        <div class="col-md-6">
+                            <img src="images/Group 33091.png" alt="" class="w-100">
+                        </div>
+                    </div>
+                  </div>
+              </div>
+      </header>
+      <main>
+          <section class="container mt-5">
+              <h2>WOMEN JACKET</h2>
+              <div class="mt-5">
+                  <div class="row">
+                      <div class="col-md-4 mb-2">
+                        <div class="card shadow card-border">
+                            <img src="images/SeekPng 1.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                              <h5 class="card-title">Yellow Coat Jacket</h5>
+                              <p class="card-text">Lorem Ipsum is simply dummy text of the 
+                                printing and typesetting industry.</p>
+                              <div class="card-inner d-flex justify-content-between">                            
+                                  <h3>$560</h3>
+                                  <a href="#" class="btn btn-primary btn-custom">BUY NOW</a>
+                              </div>                            
+                            </div>
+                          </div>
+                      </div>
+                      <div class="col-md-4  mb-2">
+                        <div class="card shadow card-border">
+                            <img src="images/image 15.png" class="card-img-top " alt="...">
+                            <div class="card-body">
+                              <h5 class="card-title">Yellow Coat Jacket</h5>
+                              <p class="card-text">Lorem Ipsum is simply dummy text of the 
+                                printing and typesetting industry.</p>
+                              <div class="card-inner d-flex justify-content-between">                            
+                                  <h3>$560</h3>
+                                  <a href="#" class="btn btn-primary btn-custom">BUY NOW</a>
+                              </div>                            
+                            </div>
+                          </div>
+                      </div>
+                      <div class="col-md-4">
+                        <div class="card shadow card-border">
+                            <img src="images/SeekPng 1.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                              <h5 class="card-title">Yellow Coat Jacket</h5>
+                              <p class="card-text">Lorem Ipsum is simply dummy text of the 
+                                printing and typesetting industry.</p>
+                              <div class="card-inner d-flex justify-content-between">                            
+                                  <h3>$560</h3>
+                                  <a href="#" class="btn btn-primary btn-custom">BUY NOW</a>
+                              </div>                            
+                            </div>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+          </section>
+          <section class="container mt-5">
+            <h2>MEN JACKET</h2>
+            <div class="mt-5">
+                <div class="row">
+                    <div class="col-md-4  mb-2">
+                      <div class="card shadow card-border">
+                          <img src="images/goose-down-jacket-mens-uk-adidas-patagonia-sale-canada-jackets-insulated-amazon-rab-schoffel-country-twickenham-coat-in-grey-rain-with-hood-keen-womens-sandals.jpg" class="card-img-top" alt="...">
+                          <div class="card-body">
+                            <h5 class="card-title">Snowboard Jacket Mens</h5>
+                            <p class="card-text">Lorem Ipsum is simply dummy text of the 
+                              printing and typesetting industry.</p>
+                            <div class="card-inner d-flex justify-content-between">                            
+                                <h3>$560</h3>
+                                <a href="#" class="btn btn-primary btn-custom">BUY NOW</a>
+                            </div>                            
+                          </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4  mb-2">
+                      <div class="card shadow card-border">
+                          <img src="images/61fTX5TjAEL._UL1001_.jpg" class="card-img-top " alt="...">
+                          <div class="card-body">
+                            <h5 class="card-title">Men Leather Jackets</h5>
+                            <p class="card-text">Lorem Ipsum is simply dummy text of the 
+                              printing and typesetting industry.</p>
+                            <div class="card-inner d-flex justify-content-between">                            
+                                <h3>$560</h3>
+                                <a href="#" class="btn btn-primary btn-custom">BUY NOW</a>
+                            </div>                            
+                          </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                      <div class="card shadow card-border">
+                          <img src="images/MJC433-MD.jpg" class="card-img-top" alt="...">
+                          <div class="card-body">
+                            <h5 class="card-title">Men Casual Jackets</h5>
+                            <p class="card-text">Lorem Ipsum is simply dummy text of the 
+                              printing and typesetting industry.</p>
+                            <div class="card-inner d-flex justify-content-between">                            
+                                <h3>$560</h3>
+                                <a href="#" class="btn btn-primary btn-custom">BUY NOW</a>
+                            </div>                            
+                          </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class=" feature-section container mt-5">
+          <h2>FEATURES</h2>
+          <div class="row mt-5">
+            <div class="col-md-4 text-center">
+               <img src="images/col-1-img.png" alt="" class="mb-3">
+               <h4>Scalable</h4>
+               <p>Croissant ice cream macaroon cake. Dessert jelly beans candy cookie. Bear claw candy canes gingerbread caramels cake. Macaroon applicake gummi bears jelly marzipan.</p>
+            </div>
+            <div class="col-md-4  text-center">
+              <img src="images/col-2-img.png" alt="" class="mb-3">
+              <h4>Instant</h4>
+              <p>Croissant ice cream macaroon cake. Dessert jelly beans candy cookie. Bear claw candy canes gingerbread caramels cake. Macaroon applicake gummi bears jelly marzipan.</p>
+            </div>
+            <div class="col-md-4  text-center">
+              <img src="images/col-3-img.png" alt="" class="mb-3">
+              <h4>Something</h4>
+              <p>Croissant ice cream macaroon cake. Dessert jelly beans candy cookie. Bear claw candy canes gingerbread caramels cake. Macaroon applicake gummi bears jelly marzipan.</p>
+            </div>
+          </div>
+        </section>
+
+        <section class=" container mt-5">
+            <div class="row ">
+                <div class="col-md-5 ">
+                  <div class="d-flex border-none p-3  shadow ">
+                      <img src="images/image 12.png" alt=""
+                           class="flex-shrink-0 mr-3 mt-3 rounded-circle" style="width:100px;height:100px;">
+                      <div class="ps-4 pt-3">
+                          <h4 class="pb-2">Find The Perfect Pit</h4>
+                          <p>Everybody is different, which is why <br> we
+                              offer styles for every body.</p>
+                      </div>
+                  </div>
+                  <div class="d-flex border mt-2 p-3  shadow">
+                      <img src="images/image 13.png" alt=""
+                           class="flex-shrink-0 mr-3 mt-3 rounded-circle" style="width:100px;height:100px;">
+                      <div class="ps-4 pt-3">
+                          <h4 class="pb-2">Free Exchange</h4>
+                          <p>One of the many reasons you can shop <br>
+                              with peace of mind.</p>
+                      </div>
+                  </div>
+                  <div class="d-flex mt-2 mb-3 border p-3 shadow ">
+                      <img src="images/image 14.png" alt=""
+                           class="flex-shrink-0 mr-3 mt-3 rounded-circle" style="width:100px;height:100px;">
+                      <div class="ps-4 pt-3">
+                          <h4 class="pb-2">Contact Our Seller</h4>
+                          <p>They are here to help.  That's quite <br>
+                              literally what we pay them for.
+                          </p>
+                      </div>
+                  </div>
+              </div>
+              <div class="col-md-7 pt-5">
+                  <img src="images/XMLID 1.png" alt="" class="w-100 pt-5">
+              </div>
+           </div>
+        </section>     
+      </main>
+      <footer class="footer-section text-center pt-3 pb-3 mt-2">
+          <small class="">copyright © Nahid Lasker</small>
+      </footer>
+   
+
+    
+
+    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
+  </body>
 </html>
